--- a/BookAssignment/Views/_ViewImports.cshtml
+++ b/BookAssignment/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using BookAssignment
 @using BookAssignment.Models
+@using BookAssignment.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, BookAssignment
