--- a/BookAssignment/Views/Home/Index.cshtml
+++ b/BookAssignment/Views/Home/Index.cshtml
@@ -37,10 +37,13 @@
             box-shadow: 0px 0px 1px #777;
         }
 </style>
-<!--Add in picture of Books-->
+
+<!--Incorporate Filter by Classification (see the rest in Default.cshtml)-->
 <div>
     <vc:navigation-menu />
 </div>
+
+<!--Add in picture of Books-->
 <div class="container">
     <div class="text-center">
         <img src="~/img/bookImage.jpg" class="rounded" />
@@ -83,6 +86,8 @@
     </table>
 
 </div>
+
+<!--Dynamic Numbered Page Menu menu-->
 <div page-model="@Model.PagingInfo" page-action="Index" page-classes-enabled="true" page-class="btn"
      page-class-normal="btn-outline-dark"
      page-class-selected="btn-primary" page-url-category="@Model.Classification"
