--- a/BookAssignment/Views/Shared/Components/NavigationMenu/Default.cshtml
+++ b/BookAssignment/Views/Shared/Components/NavigationMenu/Default.cshtml
@@ -69,7 +69,7 @@
                class="@(category == ViewBag.SelectedCategory ? "btn-primary" : "btn-outline-secondary")"
                asp-action="Index" asp-controller="Home"
                asp-route-category="@category"
-               asp-route-page="1">
+               asp-route-pageNum="1">
                 @category
             </a>
 
