--- a/BookAssignment/Views/_ViewImports.cshtml
+++ b/BookAssignment/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using BookAssignment
 @using BookAssignment.Models
 @using BookAssignment.Models.ViewModels
+@using BookAssignment.Infrastructure
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, BookAssignment
