--- a/BookAssignment/Views/Shared/_Layout.cshtml
+++ b/BookAssignment/Views/Shared/_Layout.cshtml
@@ -6,8 +6,20 @@
     <title>@ViewData["Title"] - BookProject</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link href="/lib/font-awesome/css/all.min.css" rel="stylesheet" />
+
 </head>
+<!--Navbar with Cart icon-->
 <body>
+    <div class="p-2">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col navbar-brand">Book Store</div>
+                <div class="col-6 text-right">
+                    <vc:cart-summary></vc:cart-summary>
+            </div>
+        </div>
+    </div>
 
     <div>
         @RenderBody()
