--- a/BookAssignment/Pages/Purchase.cshtml
+++ b/BookAssignment/Pages/Purchase.cshtml
@@ -7,6 +7,7 @@
 <div class="text-center">
     <a class="btn btn-primary" href="@Model.ReturnUrl">Continue Shopping</a>
 </div>
+<!--Table to display items in your cart-->
 <table class="table table-bordered table-striped">
     <thead>
         <tr>
@@ -16,6 +17,7 @@
             <th>Subtotal</th>
         </tr>
     </thead>
+    <!--Dynamically go through purchase model to list out all items in cart-->
     <tbody>
         @foreach (var line in Model.Cart.Lines)
         {
@@ -24,6 +26,14 @@
                 <td>@line.Quantity</td>
                 <td>@line.Project.Price</td>
                 <td>@((line.Quantity * line.Project.Price).ToString("c"))</td>
+                <!--Remove button to remove items from cart-->
+                <td class="text-center">
+                    <form asp-page-handler="Remove" method="post">
+                        <input type="hidden" name="BookID" value="@line.Project.BookID" />
+                        <input type="hidden" name="returnUrl" value="@Model.ReturnUrl" />
+                        <button type="submit" class="btn btn-sm btn-danger">Remove</button>
+                    </form>
+                </td>
             </tr>
         }
     </tbody>
